# EMROAI

./: .cache_ggshield  .gitignore
AI/: pyproject.toml  run_segment.py
AI/fundus-lesions-toolkit/: pyproject.toml  run_segment.py  setup.cfg
AI/fundus-lesions-toolkit/src/fundus_lesions_toolkit/models/: hf_hub.py
admin/: index.html  package-lock.json  package.json
admin/src/: App.jsx  index.css
admin/src/assets/: assets.js
admin/src/components/: DoctorCompleteModal.jsx  ImageAnnotatorModal.jsx  Navbar.jsx  Sidebar.jsx
admin/src/context/: AdminContext.jsx  AppContext.jsx  DoctorContext.jsx
admin/src/pages/: Login.jsx
backend/: .env  package-lock.json  package.json  server.js
backend/config/: cloudinary.js  gridfs.js  mongodb.js
backend/controllers/: adminController.js  aiController.js  doctorController.js  medicalRecordController.js  userController.js
backend/middlewares/: auth.js  authAdmin.js  authDoctor.js  authUser.js  multer.js
backend/models/: appointmentModel.js  doctorModel.js  userModel.js
backend/routes/: adminRoute.js  aiRoute.js  doctorRoute.js  filesRoute.js  medicalRecordRoutes.js
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/assets/: assets.js
frontend/src/components/: Banner.jsx  Footer.jsx  Header.jsx  NavBar.jsx  RelatedDoctors.jsx  SpecialityMenu.jsx  TopDoctors.jsx
frontend/src/context/: AppContext.jsx
frontend/src/pages/: About.jsx  Appointment.jsx  Contact.jsx  Doctors.jsx  Home.jsx  Login.jsx  MyAppointments.jsx  MyProfile.jsx
(+26 files in other folders)
