[metadata]
name = fundus_lesions_toolkit_local
version = 0.0.0
description = Local editable install wrapper for fundus-lesions-toolkit
author = university-project
license = MIT

[options]
# use packages from src/ directory
packages = find:
package_dir =
    = src

# minimal install_requires — you can expand this to match the repo's requirements.txt
install_requires =
    numpy
    opencv-python-headless
    torchseg
    pandas
    torch
    torchvision
    matplotlib
    huggingface_hub
    kornia
    icecream

[options.packages.find]
where = src
